[gd_scene load_steps=16 format=3 uid="uid://tmovq4tcmgda"]

[ext_resource type="Texture2D" uid="uid://bodo7kbx1c1ef" path="res://Resources/Sprites/CombatZone.png" id="1_6n413"]
[ext_resource type="Script" path="res://Scripts/combat_zone.gd" id="1_uo0hj"]
[ext_resource type="Texture2D" uid="uid://dkqv73ghmhhx0" path="res://Resources/Sprites/icon.svg" id="3_xh81c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_spnsn"]
atlas = ExtResource("1_6n413")
region = Rect2(0, 0, 6, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsmvu"]
atlas = ExtResource("1_6n413")
region = Rect2(6, 0, 5, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4itc"]
atlas = ExtResource("1_6n413")
region = Rect2(10, 0, 6, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0w5y"]
atlas = ExtResource("1_6n413")
region = Rect2(0, 6, 5, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu7d2"]
atlas = ExtResource("1_6n413")
region = Rect2(11, 6, 5, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_ik3wi"]
atlas = ExtResource("1_6n413")
region = Rect2(0, 10, 6, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrice"]
atlas = ExtResource("1_6n413")
region = Rect2(6, 11, 5, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_15d25"]
atlas = ExtResource("1_6n413")
region = Rect2(10, 10, 6, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gu5u8"]
size = Vector2(20, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0pdpm"]
size = Vector2(20, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_18er7"]
size = Vector2(5, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_63kwq"]
size = Vector2(5, 5)

[node name="CornerPoint" type="Node2D"]

[node name="CombatZone" type="Node2D" parent="."]
texture_filter = 1
scale = Vector2(3, 3)
script = ExtResource("1_uo0hj")

[node name="CboxTopLeft" type="Sprite2D" parent="CombatZone"]
position = Vector2(1.49012e-08, 0)
texture = SubResource("AtlasTexture_spnsn")
centered = false

[node name="CboxTopMiddle" type="Sprite2D" parent="CombatZone"]
position = Vector2(6, 0)
texture = SubResource("AtlasTexture_qsmvu")
centered = false

[node name="CboxTopRight" type="Sprite2D" parent="CombatZone"]
position = Vector2(11, 0)
texture = SubResource("AtlasTexture_r4itc")
centered = false

[node name="CboxLeftMiddle" type="Sprite2D" parent="CombatZone"]
position = Vector2(1.49012e-08, 6)
texture = SubResource("AtlasTexture_i0w5y")
centered = false

[node name="CboxRightMiddle" type="Sprite2D" parent="CombatZone"]
position = Vector2(12, 6)
texture = SubResource("AtlasTexture_qu7d2")
centered = false

[node name="CboxBottomLeft" type="Sprite2D" parent="CombatZone"]
position = Vector2(1.49012e-08, 11)
texture = SubResource("AtlasTexture_ik3wi")
centered = false

[node name="CboxBottomMiddle" type="Sprite2D" parent="CombatZone"]
position = Vector2(6, 12)
texture = SubResource("AtlasTexture_lrice")
centered = false

[node name="CboxBottomRight" type="Sprite2D" parent="CombatZone"]
position = Vector2(11, 11)
texture = SubResource("AtlasTexture_15d25")
centered = false

[node name="Center" type="Sprite2D" parent="CombatZone"]
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_xh81c")

[node name="BottomHitboxBody" type="AnimatableBody2D" parent="CombatZone"]
collision_layer = 2
sync_to_physics = false

[node name="BottomHitbox" type="CollisionShape2D" parent="CombatZone/BottomHitboxBody"]
shape = SubResource("RectangleShape2D_gu5u8")

[node name="Center" type="Sprite2D" parent="CombatZone/BottomHitboxBody/BottomHitbox"]
visible = false
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_xh81c")

[node name="TopHitboxBody" type="AnimatableBody2D" parent="CombatZone"]
collision_layer = 2
sync_to_physics = false

[node name="TopHitbox" type="CollisionShape2D" parent="CombatZone/TopHitboxBody"]
shape = SubResource("RectangleShape2D_0pdpm")

[node name="Center" type="Sprite2D" parent="CombatZone/TopHitboxBody/TopHitbox"]
visible = false
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_xh81c")

[node name="LeftHitboxBody" type="AnimatableBody2D" parent="CombatZone"]
collision_layer = 2
sync_to_physics = false

[node name="LeftHitbox" type="CollisionShape2D" parent="CombatZone/LeftHitboxBody"]
shape = SubResource("RectangleShape2D_18er7")

[node name="Center" type="Sprite2D" parent="CombatZone/LeftHitboxBody/LeftHitbox"]
visible = false
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_xh81c")

[node name="RightHitboxBody" type="AnimatableBody2D" parent="CombatZone"]
collision_layer = 2
sync_to_physics = false

[node name="RightHitbox" type="CollisionShape2D" parent="CombatZone/RightHitboxBody"]
shape = SubResource("RectangleShape2D_63kwq")

[node name="Center" type="Sprite2D" parent="CombatZone/RightHitboxBody/RightHitbox"]
visible = false
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_xh81c")

[node name="Corner" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_xh81c")
